--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@ header {
         document.getElementById("pick4").innerHTML = numbers[3] + ",&nbsp";
         document.getElementById("pick5").innerHTML = numbers[4];
     
+        // Sort the array numerically
         numbers = numbers.sort(function(a, b) {
             return a - b;
         });
