--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ header {
             winnings = 25000;
         }
 
-        // Print special message if they won a top prize
+        // Print a special message if they won a top prize
         if (winnings == 25000) {
             document.getElementById("winnings").innerHTML = "$" + winnings + "&nbspa YEAR for LIFE";
         } else if (winnings == 7000) {
